--- a/validator_earning/app/templates/earning.html.j2
+++ b/validator_earning/app/templates/earning.html.j2
@@ -7,7 +7,7 @@
   />
   <head>
     <meta charset="utf-8">
-    <title>Network Status | Harmony</title>
+    <title>Validator Statistics | Harmony</title>
     <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=0">
     <link href="/static/apple-touch-icon-76x76.png" rel="apple-touch-icon" sizes="76x76">
     <link href="/static/apple-touch-icon-120x120.png" rel="apple-touch-icon" sizes="120x120">
@@ -62,9 +62,9 @@
                   <table style = "width: 95%;">
                     <tr>
                       <th>Address</th>
-                      <th>Total Stake</th>
-                      <th>Lifetime Rewards</th>
-                      <th>Rewards (5min)</th>
+                      <th align="right">Total Stake</th>
+                      <th align="right">Lifetime Rewards</th>
+                      <th align="right">Rewards (5min)</th>
                     </tr>
                     {% for v in elected %}
                     <tr>
