--- a/validator_earning/app/templates/earning.html.j2
+++ b/validator_earning/app/templates/earning.html.j2
@@ -57,12 +57,13 @@
             <div class="card flex-col">
             <span style="width: 95%;margin-right: 0;">
               <details open>
-                <summary>Elected ({{ stats['num-elected'] }}) // Median Stake: {{ stats['median-stake'] }}</summary>
+                <summary>Elected ({{ stats['num-elected'] }}){{ stats['median-stake'] }}</summary>
                 <div class="flex-col">
                   <table style = "width: 95%;">
                     <tr>
                       <th>Address</th>
                       <th align="right">Total Stake</th>
+                      <th align="right">Bls Keys</th>
                       <th align="right">Lifetime Rewards</th>
                       <th align="right">Rewards (5min)</th>
                     </tr>
@@ -70,6 +71,7 @@
                     <tr>
                       <td>{{ v['address'] }}</td>
                       <td align="right">{{ '%.4f'|format(v['stake']) }}</td>
+                      <td align="right">{{ v['num-keys'] }}</td>
                       <td align="right">{{ '%.4f'|format(v['lifetime-rewards']) }}</td>
                       <td align="right">{{ '%.4f'|format(v['current-earnings']) }}</td>
                     </tr>
