[validator_earning] Add count for not eligible validators

--- a/validator_earning/app/templates/earning.html.j2
+++ b/validator_earning/app/templates/earning.html.j2
@@ -84,7 +84,7 @@
             </span>
             <span style="width: 95%;margin-right: 0;">
               <details open>
-                <summary>Not Elected ({{ stats['num-eligible'] }} Eligible)</summary>
+                <summary>Not Elected ({{ stats['num-eligible'] }} Eligible | {{ stats['num-ineligible'] }} Not Eligible)</summary>
                 <div class="flex-col">
                   <table style = "width: 95%;">
                     <tr>
