--- a/validator_earning/app/templates/earning.html.j2
+++ b/validator_earning/app/templates/earning.html.j2
@@ -67,6 +67,7 @@
                       <th align="right">Lifetime Rewards</th>
                       <th align="right">Rewards (15min)</th>
                       <th align="right">Uptime</th>
+                      <th>Tag</th>
                     </tr>
                     {% for v in elected %}
                     <tr>
@@ -77,7 +78,8 @@
                       <td align="right">{{ v['num-keys'] }}</td>
                       <td align="right">{{ '%.4f'|format(v['lifetime-rewards']) }}</td>
                       <td align="right">{{ '%.4f'|format(v['current-earnings']) }}</td>
-                      <td align="right">{{ v['availibility'] }}</td>
+                      <td align="right">{{ '%s%%'|format(v['availibility']) }}</td>
+                      <td>{{ v['tag'] }}</td>
                     </tr>
                     {% endfor %}
                   </table>
@@ -95,6 +97,7 @@
                       <th align="right">Total Stake</th>
                       <th align="right">BLS Keys</th>
                       <th align="right">Lifetime Rewards</th>
+                      <th>Tag</th>
                     </tr>
                     {% for v in not_elected %}
                     <tr>
@@ -105,6 +108,7 @@
                       <td align="right">{{ '%.4f'|format(v['stake']) }}</td>
                       <td align="right">{{ v['num-keys'] }}</td>
                       <td align="right">{{ '%.4f'|format(v['lifetime-rewards']) }}</td>
+                      <td>{{ v['tag'] }}</td>
                     </tr>
                     {% endfor %}
                   </table>
