--- a/delegator_leaderboard/app/templates/delegator.html.j2
+++ b/delegator_leaderboard/app/templates/delegator.html.j2
@@ -65,13 +65,13 @@
                       <th align="right">Staked ONE</th>
                       <th align="right">Rewards</th>
                     </tr>
-                    {% for v in delegators %}
+                    {% for i, d in delegators.iterrows() %}
                     <tr>
                       <td style="font-family:'Courier New', monospaced; font-weight: 550;">
-                        {{ v['address'] }}
+                        {{ d['address'] }}
                       </td>
-                      <td align="right">{{ '%.4f'|format(v['staked-balance']) }}</td>
-                      <td align="right">{{ '%s%%'|format(v['rewards-earned']) }}</td>
+                      <td align="right">{{ d['stake (total delegated stake)'] }}</td>
+                      <td align="right">{{ d['lifetime-reward (total rewards - claim rewards)'] }}</td>
                     </tr>
                     {% endfor %}
                   </table>
