[fn_earning] Fix typo

--- a/fn_earnings/app/templates/earning.html.j2
+++ b/fn_earnings/app/templates/earning.html.j2
@@ -54,9 +54,8 @@
               <h1>Foundational Node Earnings</h1>
             </header>
             <div style="padding-top: 4px; padding-left: 20px">
-              <p><font size="2">Staring from 6/28/2019 to 5/16/2020</font></p>
+              <p><font size="2">Starting from 6/28/2019 to 5/16/2020</font></p>
             </div>
-
             <div class="card flex-col">
             <span style="width: 95%;margin-right: 0;">
               <details open>
